fixed some spacing

--- a/css/style.css
+++ b/css/style.css
@@ -856,7 +856,7 @@ main.internal .container {
 
 main.internal .container:last-child,
 main.internal .intro + .container.no-border {
-  padding-bottom: 43px;
+  padding-bottom: 53px;
 }
 
 main.internal .container:first-child,
@@ -1008,7 +1008,7 @@ main.internal .intro + .container.no-border {
   padding-bottom: 8px;
 }
 .desktop-col-7-left h4 + .headshot {
-  margin: 11px 0 17px 0;
+  margin: 11px 0 20px 0;
 }
 .container > .desktop-col-7-left p + h4 {
   font-weight: normal;
